[tool.poetry]
name = "kettlebells"
version = "0.2.24"
description = "A CLI tool to create, save, and track progress of kettlebell workouts."
authors = ["Russell Helmstedter <rhelmstedter@gmail.com>"]
readme = "README.org"
homepage = "https://github.com/rhelmstedter/kettlebells/"
repository = "https://github.com/rhelmstedter/kettlebells/"
keywords = ["CLI", "kettlebells", "fitness"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.5.2"
plotext = "^5.2.8"
iterfzf = "^1.0.0.42.0"
trogon = "^0.5.0"
pydantic = "^2.5.2"
pandas = "^2.1.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["kettlebells"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"










[tool.poetry.scripts]
kettlebells = "kettlebells.__main__:cli"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
