
[project]
name = "kettlebells"
version = "0.2.37"
description = "A CLI tool to create, save, and track progress of kettlebell workouts."
authors = [
    { name = "Russell Helmstedter", email = "rhelmstedter@gmail.com" }
]
readme = "README.md"
homepage = "https://github.com/rhelmstedter/kettlebells/"
repository = "https://github.com/rhelmstedter/kettlebells/"
keywords = ["CLI", "kettlebells", "fitness"]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.5.2",
    "plotext>=5.2.8",
    "iterfzf>=1.0.0.42.0",
    "trogon>=0.5.0",
    "pydantic>=2.5.2",
    "pandas>=2.1.3",
    "pytest-mock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "coverage>=7.3.1",
    "pytest-cov>=4.1.0",
    "ruff-lsp>=0.0.58",
]

[project.scripts]
kettlebells = "kettlebells.__main__:cli"

[tools.setuptools]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[coverage.run]
branch = true
source = ["kettlebells"]

[coverage.report]
show_missing = true
fail_under = 85

[ruff]
line-length = 120

[ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
